--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <li><a href="#contact">Contact</a></li>
       <li><a href="#servicii">The means</a></li>
       <li><a href="#profile">The goal</a></li>
-      <li><a href="#acasa">Home</a></li>
+      <li><a href="#acasa">Back to top</a></li>
     </ul>
   </div>
 
