--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
       </div>
 
       <div class="contact" id="contact">
-        <h2>Contactează-mă</h2>
-        <h3>Vrei să lucrăm împreună?</h3>
-        <p>Scrie-mi un mesaj și voi reveni cât mai curând cu putință.</p>
-        <a class="btn" href="mailto:andrei@betraining.ro">Click aici pentru transmiterea mesajului.</a>
+        <h2>Contact me</h2>
+        <h3>Want to work together?</h3>
+        <p>Click below and send me a message. I will get back to you as soon as possible.</p>
+        <a class="btn" href="mailto:andrei@betraining.ro">Click here to send the message.</a>
       </div>
     </div>
 
